integrate panko serializers, change APi for using panko serializers
