# app/controllers/api/v1_controller.rb
@@ -18,20 +18,20 @@ module Api
     end
 
     def serializer_fields(serializer_class, default_include_fields=[], forbidden_fields=[])
-      @serializer_attributes = serializer_class.attributes_to_serialize.keys.map(&:to_s)
-      return {} if response_include_fields.any? && response_exclude_fields.any?
-      return { include_fields: response_include_fields - forbidden_fields } if response_include_fields.any?
-      return { exclude_fields: response_exclude_fields + forbidden_fields } if response_exclude_fields.any?
+      @serializer_attributes = serializer_class::ATTRIBUTES
+      return {} if response_only_fields.any? && response_except_fields.any?
+      return { only: (response_only_fields - forbidden_fields).map(&:to_sym) } if response_only_fields.any?
+      return { except: (response_except_fields + forbidden_fields).map(&:to_sym) } if response_except_fields.any?
 
-      { include_fields: default_include_fields }
+      { only: default_include_fields.map(&:to_sym) }
     end
 
-    def response_include_fields
-      @response_include_fields ||= params[:response_include_fields]&.split(',').to_a & @serializer_attributes
+    def response_only_fields
+      @response_only_fields ||= params[:response_only_fields]&.split(',').to_a & @serializer_attributes
     end
 
-    def response_exclude_fields
-      @response_exclude_fields ||= params[:response_exclude_fields]&.split(',').to_a & @serializer_attributes
+    def response_except_fields
+      @response_except_fields ||= params[:response_except_fields]&.split(',').to_a & @serializer_attributes
     end
 
     def authentication_error
